--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,29 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "images = []\n",
     "\n",
-    "img500 = cv2.imread(\"./static/card/500.jpg\")\n",
+    "img500 = cv2.imread(\"./static/card/all_500_2.jpg\")\n",
     "images.append(img500)\n",
     "# plt.imshow(img500)\n",
-    "plt.show()\n",
-    "img1000 = cv2.imread(\"./static/card/1000.jpg\")\n",
-    "images.append(img1000)\n",
-    "# plt.imshow(img1000)\n",
-    "plt.show()\n",
-    "img2000 = cv2.imread(\"./static/card/2000.jpg\")\n",
-    "images.append(img2000)\n",
-    "# plt.imshow(img2000)\n",
-    "plt.show()"
+    "# plt.show()\n",
+    "# img1000 = cv2.imread(\"./static/card/1000.jpg\")\n",
+    "# images.append(img1000)\n",
+    "# # plt.imshow(img1000)\n",
+    "# plt.show()\n",
+    "# img2000 = cv2.imread(\"./static/card/2000.jpg\")\n",
+    "# images.append(img2000)\n",
+    "# # plt.imshow(img2000)\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,17 +86,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "contenu de l'image 1 :\n",
+      "CAROL 619412723454 | Coa 478708862060\n",
+      "oooosreazease 803157469682 ‘oooreszesar 407200995124\n",
+      "ovctsreszeaes @soaageer240 | CTE © FERNEATEEOA\n",
+      "sooosraezsase 198895024254 | SoMeKeD © EREVEEFESED\n",
+      "cenoovscesos 169405429708 | poaareagste _a2eaqo904836\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i, img in enumerate(images):\n",
     "    text = extract_text_from_image(img)\n",
     "    num = extract_card_number(text.split())\n",
     "\n",
-    "    # print('-'*60)\n",
-    "    # print(f\"contenu de l'image {i + 1} :\")\n",
-    "    # print(num)"
+    "    print('-'*60)\n",
+    "    print(f\"contenu de l'image {i + 1} :\")\n",
+    "    print(text)"
    ]
   }
  ],
