--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,22 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import cv2\n",
     "import pytesseract\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pytesseract.pytesseract.tesseract_cmd = r'D:\\application\\Tesseract-OCR\\tesseract.exe'"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "if os.name == 'nt':\n",
+    "    pytesseract.pytesseract.tesseract_cmd = r'D:\\application\\Tesseract-OCR\\tesseract.exe'"
    ]
   },
   {
@@ -44,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +108,129 @@
     "    print(f\"contenu de l'image {i + 1} :\")\n",
     "    print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tuple_list(input_list):\n",
+    "    output_list = []\n",
+    "    while len(input_list) >= 2:\n",
+    "        num = input_list[0]\n",
+    "        index = input_list.index(num)\n",
+    "        input_list.pop(index)\n",
+    "        next_num = input_list[index]\n",
+    "        input_list.pop(index)\n",
+    "        output_list.append((num, next_num))\n",
+    "    return output_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('0000123456789', '012345678912'), ('0000123456789', '012345678912'), ('012345678912', '0000123456789')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [\n",
+    "    \"0000123456789\",\n",
+    "    \"012345678912\",\n",
+    "    \"0000123456789\",\n",
+    "    \"012345678912\",\n",
+    "    \"012345678912\",\n",
+    "    \"0000123456789\",\n",
+    "]\n",
+    "\n",
+    "output_list = get_tuple_list(input_list)\n",
+    "print(output_list) # [(\"0000123456789\", \"012345678912\"), (\"0000123456789\", \"012345678912\"), (\"012345678912\", \"0000123456789\")]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_data(data_list):\n",
+    "    result_list = []\n",
+    "    for data_tuple in data_list:\n",
+    "        value1, value2 = data_tuple\n",
+    "        if len(value1) == 12 and not value1.startswith('0000'):\n",
+    "            code = value1\n",
+    "            serial = value2\n",
+    "        else:\n",
+    "            code = value2\n",
+    "            serial = value1\n",
+    "        # if not code.startswith('0000') and serial.startswith('0000'):\n",
+    "        result_list.append({\n",
+    "            'code': code,\n",
+    "            'serial': serial\n",
+    "        })\n",
+    "    return result_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'code': '012345678912', 'serial': '0000123456789'}, {'code': '012345678912', 'serial': '0000123456789'}, {'code': '012345678912', 'serial': '0000123456789'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [(\"0000123456789\", \"012345678912\"), (\"0000123456789\", \"012345678912\"), (\"012345678912\", \"0000123456789\")]\n",
+    "\n",
+    "output_list = format_data(input_list)\n",
+    "print(output_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_list =  [('0000123456789', '012345678912'), ('0000123456789', '012345678912'), ('012345678912', '0000123456789')]\n",
+      "output_list =  [{'code': '012345678912', 'serial': '0000123456789'}, {'code': '012345678912', 'serial': '0000123456789'}, {'code': '012345678912', 'serial': '0000123456789'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [('0000123456789', '012345678912'), ('0000123456789', '012345678912'), ('012345678912', '0000123456789')]\n",
+    "output_list = [\n",
+    "{\n",
+    "  \"code\": \"012345678912\",\n",
+    "  \"serial\": \"0000123456789\"\n",
+    "},\n",
+    "{\n",
+    "  \"code\": \"012345678912\",\n",
+    "  \"serial\": \"0000123456789\"\n",
+    "},\n",
+    "{\n",
+    "  \"code\": \"012345678912\",\n",
+    "  \"serial\": \"0000123456789\"\n",
+    "},\n",
+    "]\n",
+    "print(\"input_list = \", input_list)\n",
+    "print(\"output_list = \", output_list)"
+   ]
   }
  ],
  "metadata": {
@@ -131,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
